--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.22.4",
     "framer-motion": "^11.13.5",
+    "gsap": "^3.12.5",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
