--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
+    "react-scroll-motion": "^0.3.3",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
